<resources>
    <string name="app_name">WanAndroid</string>
    <string name="text_login">登陆</string>
    <string name="text_register">注册</string>
    <string name="home">主页</string>
    <string name="discovery">发现</string>
    <string name="my">我的</string>
    <string name="todo">待办</string>
    <string name="collected">收藏</string>
    <string name="more">更多</string>
    <string name="adjust_font">调整字体</string>
    <string name="refresh">刷新</string>
    <string name="uncollect">取消收藏</string>
    <string name="copy_link">复制链接</string>
    <string name="unfinished">未完成</string>
    <string name="done">已完成</string>
    <string name="title">标     题:</string>
    <string name="content">内    容:</string>
    <string name="submit">提     交</string>
    <string name="date">日     期:</string>
    <string name="priority">优先级:</string>
    <string name="commonly">一般</string>
    <string name="important">重要</string>
    <string name="hint_todo_title">请输入待办事宜的标题</string>
    <string name="hint_todo_detail">请输入待办事宜的详情</string>
</resources>
