<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
                name="data"
                type="com.anymore.example.mvvm.model.entry.Todo"/>
    </data>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingRight="@dimen/activity_horizontal_padding"
                android:paddingLeft="@dimen/activity_horizontal_padding">
            <TextView
                    android:layout_width="58dp"
                    android:layout_height="48dp"
                    android:text="@string/title"
                    android:gravity="center"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:lines="1"
                    android:ellipsize="end"
                    android:hint="@string/hint_todo_title"
                    android:text="@={data.title}"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingRight="@dimen/activity_horizontal_padding"
                android:paddingLeft="@dimen/activity_horizontal_padding">
            <TextView
                    android:layout_width="58dp"
                    android:layout_height="48dp"
                    android:text="@string/content"
                    android:gravity="center"
                    android:layout_gravity="top"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="top"
                    android:minLines="5"
                    android:hint="@string/hint_todo_detail"
                    android:text="@={data.content}"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingRight="@dimen/activity_horizontal_padding"
                android:paddingLeft="@dimen/activity_horizontal_padding">
            <TextView
                    android:layout_width="58dp"
                    android:layout_height="48dp"
                    android:text="@string/priority"
                    android:gravity="center"/>
            <RadioGroup
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/commonly"
                        android:checked="true"/>
                <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/important"/>
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingRight="@dimen/activity_horizontal_padding"
                android:paddingLeft="@dimen/activity_horizontal_padding">
            <TextView
                    android:layout_width="58dp"
                    android:layout_height="48dp"
                    android:text="@string/date"
                    android:gravity="center"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@{data.completeDateStr}"/>
        </LinearLayout>

        <Button
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:layout_gravity="center_horizontal"/>

    </LinearLayout>
</layout>
