<?xml version="1.0" encoding="utf-8"?>
<layout
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:android="http://schemas.android.com/apk/res/android">

		<android.support.constraint.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent">

				<!--<com.airbnb.lottie.LottieAnimationView-->
						<!--android:layout_width="60dp"-->
						<!--android:layout_height="60dp"-->
						<!--app:layout_constraintEnd_toEndOf="parent"-->
						<!--android:layout_marginEnd="8dp"-->
						<!--app:layout_constraintStart_toStartOf="parent"-->
						<!--android:layout_marginStart="8dp"-->
						<!--android:layout_marginTop="90dp"-->
						<!--app:layout_constraintTop_toTopOf="parent"-->
						<!--app:lottie_autoPlay="true"-->
						<!--app:lottie_loop="true"-->
						<!--app:lottie_imageAssetsFolder="images"-->
						<!--app:lottie_fileName="data.json"/>-->

				<TextView
						android:id="@+id/tv_app_name"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/app_name"
						android:textSize="24sp"
						android:textColor="@color/colorAccent"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintEnd_toEndOf="parent"
						android:layout_marginTop="8dp"
						app:layout_constraintTop_toTopOf="parent"
						android:layout_marginBottom="8dp"
						app:layout_constraintBottom_toBottomOf="parent"
						android:layout_marginStart="8dp"
						android:layout_marginEnd="8dp"/>

				<android.support.constraint.Guideline
						android:orientation="vertical"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:id="@+id/vertical_center_guideline"
						app:layout_constraintGuide_percent="0.50"/>


				<Button
						android:id="@+id/btn_login"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/text_login"
						app:layout_constraintEnd_toStartOf="@+id/vertical_center_guideline"
						android:layout_marginEnd="32dp"
						android:layout_marginBottom="120dp"
						app:layout_constraintBottom_toBottomOf="parent"/>

				<Button
						android:id="@+id/btn_register"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/text_register"
						app:layout_constraintBottom_toBottomOf="@+id/btn_login"
						app:layout_constraintStart_toStartOf="@+id/vertical_center_guideline"
						android:layout_marginStart="32dp"/>
		</android.support.constraint.ConstraintLayout>
</layout>
